src-kubernetes/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teamroasterepl
  labels:
    monitoring: kube-prom-stack
    istio-injection: enabled
