src-kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: teamroasterepl
  name: teamroasterepl
  namespace: teamroasterepl
spec:
  ports:
  - port: 1212
    name: roasterscrape
    protocol: TCP
    targetPort: 1212
  selector:
    app: teamroasterepl
  type: LoadBalancer
status:
  loadBalancer: {}
